# builder-prototype

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
src/backend/: run_server.py
src/backend/LLMcontrols/: __init__.py  main.py
src/backend/LLMcontrols/api/: __init__.py  router.py
src/backend/LLMcontrols/components/: __init__.py  base.py  registry.py
src/backend/LLMcontrols/graph/: __init__.py  base.py  executor.py
src/backend/LLMcontrols/llm/: __init__.py  openai.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: index.ts
src/frontend/src/components/: ComponentPanel.tsx  FlowEditor.tsx  FlowList.tsx  Navbar.tsx
src/frontend/src/components/nodes/: ChatInputNode.tsx  ChatOutputNode.tsx  LLMNode.tsx  PromptNode.tsx  index.ts
src/frontend/src/store/: index.ts
src/frontend/src/types/: index.ts
